--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: generate animation
 
 on:
-  # 每 24 小時自動運行一次
   schedule:
     - cron: "0 */24 * * *" 
-  
-  # 也可以手動觸發運行
   workflow_dispatch:
-  
-  # 每次 push 到 main 分支時運行
   push:
     branches:
     - main
@@ -21,20 +16,20 @@ jobs:
     timeout-minutes: 5
     
     steps:
-      # 生成貪吃蛇動畫
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          # 建議這裡直接確認是你的 GitHub ID
+          github_user_name: hsuhsin-h
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         
-      # 將生成的檔案推送到 output 分支
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
+          # 確保這一行縮排正確
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
