--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,8 +18,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: snake.gif
-          invert_colors: true # 🔥 讓蛇顏色反轉，讓背景變暗，蛇變亮
+          outputs: dist/snake.svg
 
       - name: Push snake.svg to output branch
         uses: crazy-max/ghaction-github-pages@v3
