--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: hsuhsin-h
           outputs: dist/snake.svg
 
       - name: Push snake.svg to output branch
