--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -17,7 +17,7 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: hsuhsin-h
+          github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg
 
       - name: Push snake.svg to output branch
